[의수] fix: bottom content align

--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,7 @@
   --padding-updown: 12px;
   --padding-one: 44px;
   --margin: 12px;
+  --margin-semi: 24px;
   --margin-one: 44px;
 
   /* Font Size */
@@ -208,7 +209,7 @@ li {
 .calendar_frame {
   width: 100%;
   height: 100%;
-  margin-bottom: var(--margin-one);
+  margin-bottom: var(--margin-semi);
 }
 
 .frame {
@@ -299,10 +300,10 @@ li {
 .home .right_component .contentsFrame {
   width: 100%;
   height: auto;
-  border-radius: 15px;
+  /* border-radius: 15px;
   box-shadow: 0px 0px 10px 0.3px var(--color-gray-light);
-  border: none;
-  background-color: var(--color-white);
+  border: none; */
+  /* background-color: var(--color-white); */
 }
 
 .claendarchangecls {
