--- a/src/assets/carousel.css
+++ b/src/assets/carousel.css
@@ -1,9 +1,3 @@
-/* body {
-    background: #f8f8f8;
-    color: #2c3e50;
-    font-family: "Source Sans Pro", sans-serif;
-  }
-   */
   .card-carousel-wrapper {
     display: flex;
     align-items: center;
